--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Chef's Choice</title>
+    <title>Privacy Policy - Calorie ai</title>
     <style>
         * {
             margin: 0;
@@ -93,7 +93,7 @@
             <h1>Gizlilik Politikası</h1>
             <p class="update-date">Son güncelleme: 26 Aralık 2024</p>
             
-            <p><span class="app-name">Chef's Choice</span> uygulamasını kullandığınız için teşekkür ederiz. Gizliliğiniz bizim için önemlidir. Bu gizlilik politikası, uygulamamızı kullanırken bilgilerinizin nasıl toplandığını, kullanıldığını ve korunduğunu açıklamaktadır.</p>
+            <p><span class="app-name">Calorie ai</span> uygulamasını kullandığınız için teşekkür ederiz. Gizliliğiniz bizim için önemlidir. Bu gizlilik politikası, uygulamamızı kullanırken bilgilerinizin nasıl toplandığını, kullanıldığını ve korunduğunu açıklamaktadır.</p>
             
             <h2>Topladığımız Bilgiler</h2>
             <p>Uygulamamız, kullanıcı deneyimini iyileştirmek amacıyla aşağıdaki bilgileri toplayabilir:</p>
@@ -168,7 +168,7 @@
             <h2>Contact</h2>
             <div class="contact-info">
                 <p>If you have questions about this privacy policy, please contact us:</p>
-                <p><strong>Email:</strong> <a href="mailto:chefschoiceapp@gmail.com">chefschoiceapp@gmail.com</a></p>
+                <p><strong>Email:</strong> <a href="mailto:chefschoiceapp@gmail.com">baris.yalcin0657@gmail.com</a></p>
             </div>
         </div>
     </div>
